# nimbus-tiers

./: .gitignore  BuildThisRepoFromArchitecture.md  ProgressBuildingRepo.md  README.md  generateNewProject.py  hybrid-ai-coding-architecture-v2_1.md  pyproject.toml  setupEnvironment.py
src/nimbus_tiered/: __init__.py
src/nimbus_tiered/environment/: __init__.py  cli.py  environment_setup.py  setup_step.py
src/nimbus_tiered/environment/steps/: __init__.py  aider_step.py  claude_code_step.py  groq_step.py  nvidia_driver_step.py  (+4 more)
src/nimbus_tiered/generator/: cli.py  cloud_only_path.py  file_writer.py  full_hybrid_path.py  git_initializer.py  light_local_path.py  project_generator.py  setup_path.py
src/nimbus_tiers/: __init__.py
src/nimbus_tiers/environment/: cli.py  environment_setup.py  setup_step.py
src/nimbus_tiers/generator/: __init__.py  cli.py  cloud_only_path.py  full_hybrid_path.py  git_initializer.py  light_local_path.py  project_generator.py
templates/: .aider.conf.yml  .aiderignore  .gitignore  CLAUDE.md  CONTEXT.md  NIMBUS_GUIDE.md  VERIFY.md
templates/docs/: architecture.md
templates/logs/: ai-routing.csv
templates/plans/: README.md
templates/stacks/java-gradle/: build.gradle  gradlew  settings.gradle
templates/stacks/java-maven/: Application.java  ApplicationTest.java  mvnw  pom.xml
templates/stacks/node/: index.js  index.test.js  package.json
templates/stacks/python/: main.py  test_main.py
tests/: test_cli.py  test_environment_steps.py  test_file_writer.py  test_full_hybrid_path.py  test_project_generator.py  test_stub_paths.py
(+9 files in other folders)
