[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbus-tiers"
version = "0.1.0"
description = "Template repository for the Hybrid AI Coding Architecture (Plan -> Execute -> Review)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nimbus-tiers contributors" },
]
keywords = ["ai", "coding", "aider", "claude-code", "ollama", "tabbyapi", "scaffold", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
nimbus-generate = "nimbus_tiers.generator.cli:main"
nimbus-setup = "nimbus_tiers.environment.cli:main"

[project.urls]
Source = "https://github.com/invaderfry/nimbus-tiers"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nimbus_tiers" = ["../../templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x --no-header"
